syntax="proto2";

package yamcs.protobuf.activities;

option java_package = "org.yamcs.protobuf.activities";
option java_outer_classname = "ActivitiesProto";
option java_multiple_files = true;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

message ActivityDefinitionInfo {
  // Activity type.
  // Common types: MANUAL, SCRIPT, COMMAND, COMMAND_STACK
  optional string type = 1;

  // Activity arguments. The expected arguments
  // are different for each activity type
  optional google.protobuf.Struct args = 2;

  // Optional comment
  optional string comment = 3;
}

message ActivityInfo {

  // Activity identifier
  optional string id = 1;

  // Start time of the activity
  optional google.protobuf.Timestamp start = 2;

  // Differentiator in case of multiple activities
  // with the same start time
  optional uint32 seq = 3;

  // Activity status
  optional ActivityStatus status = 4;

  // User who started the run
  optional string startedBy = 5;

  // Activity type
  optional string type = 6;

  // Activity arguments
  optional google.protobuf.Struct args = 7;

  // Activity detail (short descriptive)
  optional string detail = 8;

  // Stop time of the activity run
  optional google.protobuf.Timestamp stop = 9;

  // User who stopped the run. Only set if the activity
  // was manually stopped
  optional string stoppedBy = 10;

  // If set, the activity is stopped, but failed
  optional string failureReason = 11;
}

message ExecutorInfo {
  // Executor type name
  optional string type = 1;

  // Display name
  optional string displayName = 2;

  // Executor description
  optional string description = 3;

  // Name of an icon in the Material Icons font.
  optional string icon = 4;
}

enum ActivityStatus {
  // An activity is runing
  RUNNING = 1;

  // The activity was cancelled. It may or may not still be running
  // (verify stop time).
  CANCELLED = 2;

  // The activity completed successfully
  SUCCESSFUL = 3;

  // An error occurred while running this activity
  FAILED = 4;
}

enum ActivityLogLevel {
  // Info level
  INFO = 1;

  // Warning level
  WARNING = 2;

  // Error level
  ERROR = 3;
}

message ActivityLogInfo {

  // Log time
  optional google.protobuf.Timestamp time = 1;

  // Source of this log message. One of:
  //
  // - SERVICE: the log is generated by the activity service
  // - ACTIVITY: the log is generated by the activity itself
  optional string source = 2;

  // Log level
  optional ActivityLogLevel level = 3;

  // Log message
  optional string message = 4;
}
